PCS BAckup 26Dec2023/Backup-Source/objects/Vision_DRL_Sales_External__c.object
<CustomObject>
    <fields>
        <fullName>GCP_Customer_Name__c</fullName>
        <label>GCP Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_Product_Family__c</fullName>
        <label>GCP Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_Unique_Identifier__c</fullName>
        <label>GCP Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_Update_Date__c</fullName>
        <label>GCP Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity_in_Units__c</fullName>
        <label>Quantity in Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Agreement_No__c</fullName>
        <label>Agreement No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Phoenix_Contract__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>DRL_Sales_External</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>DRL_Sales_External</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Is_Internal_Batch_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Field is used in handleLookupsFuncBatchCls. Using this field we are escaping already processed records from batch process</description>
        <label>Is Internal Batch Processed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Month_Text__c</fullName>
        <label>Month Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Month__c</fullName>
        <label>Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Month_dtls__c</fullName>
        <label>Processed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_NPR_Customer_Code__c</fullName>
        <label>NPR Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Processed_Month__c</fullName>
        <formula>CASE(MONTH( Vision_Month_dtls__c),
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;,
4, &quot;Apr&quot;,
5, &quot;May&quot;,
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
&quot; &quot;)+&quot;-&quot; +RIGHT(TEXT(YEAR( Vision_Month_dtls__c)) , LEN(TEXT(YEAR( Vision_Month_dtls__c))) - 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Processed Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>DRL_Sales_External</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_SKU_Code__c</fullName>
        <label>SKU Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Sales_Dollar__c</fullName>
        <label>Sales Dollar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Sales_Type__c</fullName>
        <label>Sales Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rx</fullName>
                </value>
                <value>
                    <fullName>SRx</fullName>
                </value>
                <value>
                    <fullName>OTC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_TPT_Dollar__c</fullName>
        <label>TPT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_TPT_Pct__c</fullName>
        <label>TPT %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_Units__c</fullName>
        <label>Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Update_Date__c</fullName>
        <label>Vision Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_ndc_code__c</fullName>
        <label>NDC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DRL Sales External</label>
    <nameField>
        <displayFormat>DRLSalesExt-{0000000}</displayFormat>
        <label>DRL Sales External Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DRL Sales External</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>